# IrrigationNeedPrediction

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: plot_importance.py
src/: baseline.py  baseline_te.py  catboost_run.py  data.py  ensemble.py  features.py  paths.py  threshold.py  xgboost_run.py
