[project]
name = "in"
version = "0.1.0"
description = "Kaggle Playground S6E4 - predicting irrigation need (3-class, balanced accuracy). LightGBM/XGBoost/CatBoost ensemble with engineered features and per-class probability-weight tuning."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
